@@ -582,8 +582,7 @@
 		 */
 		function maskOpen()
 		{
-			$return  = "<div id='p4a_messages'></div>\n";
-			$return .= "<form method='post' enctype='multipart/form-data' id='p4a' onsubmit='return false' action='index.php'>\n";
+			$return = "<form method='post' enctype='multipart/form-data' id='p4a' onsubmit='return false' action='index.php'>\n";
 			$return .= "<div>\n";
 			$return .= "<input type='hidden' name='_object' value='" . $this->getId() . "' />\n";
 			$return .= "<input type='hidden' name='_action' value='none' />\n";
