@@ -14,11 +14,11 @@
 - check if the new yesexpr is right when ZF 1.5 will be out
 - implement errors with exceptions
 - deprecate and remove p4a_auto_maxlength
-- implement the "system message"
 - review p4a_field for strange methods to clean up
 - move include.php inside p4a.php?
 - rename config.php to constants.php?
 - php5ize all components
+- style system messages and implement icon
 
 2.99.0
 - Zend Framework 1.0.3 was added
@@ -100,6 +100,8 @@
 - P4A_I18N::format() method now has a third param "num_of_decimals", used only if type is float or decimal
 - P4A_Field::format() method now uses the P4A_Data_Field->getNumOfDecimals() to automatically format numbers the most coherent way
 - P4A::message() method was added, you can use it to print out messages to users without having to instance any P4A_Message
+- P4A::getMessages() method was added to read and clean the messages queue
+- P4A::getMessages() method is now used to print out messages to users in a nice way
 
 2.2.3
 - a bug with P4A_Label was fixed ("for" property was erroneous with radio and file P4A_Field)
